test: Enhance MultiWrestlerFeudService and AccountServiceTest with role-based access control and additional functionality